--- a/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
@@ -5,183 +5,189 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/intake_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:scrollbars="vertical">
 
         <LinearLayout
+            android:id="@+id/intake_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
-            android:layout_marginTop="24dp"
             android:orientation="vertical"
             android:visibility="visible">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/mcn_logo" />
-
-            <TextView
-                android:id="@+id/costInfo"
-                style="@style/tradeGothicLTStd_Dynamic20"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="58dp"
-                android:text="@string/visit_cost_desc"
-                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:orientation="horizontal"
-                android:visibility="gone">
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginTop="24dp"
+                android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/coupon_code_edit_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="@string/visit_cost_coupon_code"
-                        android:inputType="textCapCharacters|textFilter|textNoSuggestions"
-                        android:text="FREE"
-                        android:textAllCaps="true" />
-                </android.support.design.widget.TextInputLayout>
-
-                <Button
-                    android:id="@+id/apply_button"
-                    style="@style/Widget.AppCompat.Button.Colored"
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:text="@string/visit_cost_apply" />
+                    android:layout_gravity="center"
+                    android:src="@drawable/mcn_logo" />
+
+                <TextView
+                    android:id="@+id/costInfo"
+                    style="@style/tradeGothicLTStd_Dynamic20"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="58dp"
+                    android:text="@string/visit_cost_desc"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/coupon_code_edit_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:hint="@string/visit_cost_coupon_code"
+                            android:inputType="textCapCharacters|textFilter|textNoSuggestions"
+                            android:text="FREE"
+                            android:textAllCaps="true" />
+                    </android.support.design.widget.TextInputLayout>
+
+                    <Button
+                        android:id="@+id/apply_button"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:text="@string/visit_cost_apply" />
+                </LinearLayout>
+
+                <TextView
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/my_care_reason_phone_sug" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/phone_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:errorEnabled="true"
+                    app:errorTextAppearance="@style/error_appearance"
+                    app:hintTextAppearance="@style/hint_appearance">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/reasonPhone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:ems="10"
+                        android:imeOptions="actionNext"
+                        android:inputType="phone"
+                        android:maxLength="12"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <TextView
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/my_care_reason_sug" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/reason_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:errorEnabled="true"
+                    app:errorTextAppearance="@style/error_appearance"
+                    app:hintTextAppearance="@style/hint_appearance">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/reasonForVisit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:inputType="textCapSentences"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+
+                </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
-            <TextView
-                style="@style/tradeGothicLTStd_Dynamic18"
+            <com.google.android.flexbox.FlexboxLayout
+                android:id="@+id/agree_privacy_policy_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="@string/my_care_reason_phone_sug" />
+                android:layout_gravity="left"
+                android:layout_marginBottom="18dp"
+                android:layout_marginLeft="18dp"
+                android:layout_marginRight="28dp"
+                android:orientation="horizontal"
+                app:flexWrap="wrap">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/phone_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:errorEnabled="true"
-                app:errorTextAppearance="@style/error_appearance"
-                app:hintTextAppearance="@style/hint_appearance">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/reasonPhone"
-                    android:layout_width="match_parent"
+                <android.support.v7.widget.AppCompatCheckBox
+                    android:id="@+id/agree_privacy_policy_check"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:ems="10"
-                    android:imeOptions="actionNext"
-                    android:inputType="phone"
-                    android:maxLength="12"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    android:layout_marginTop="-3dp" />
 
-            </android.support.design.widget.TextInputLayout>
-
-            <TextView
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/my_care_reason_sug" />
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/reason_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:errorEnabled="true"
-                app:errorTextAppearance="@style/error_appearance"
-                app:hintTextAppearance="@style/hint_appearance">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/reasonForVisit"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/agree_privacy_policy_text1"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:inputType="textCapSentences"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    android:layout_toRightOf="@+id/agree_privacy_policy_check"
+                    android:labelFor="@+id/agree_privacy_policy_check"
+                    android:text="@string/agree_privacy_policy_text1" />
 
-            </android.support.design.widget.TextInputLayout>
+                <TextView
+                    android:id="@+id/agree_privacy_policy_text2"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/agree_privacy_policy_text1"
+                    android:labelFor="@+id/agree_privacy_policy_check"
+                    android:text="@string/agree_privacy_policy_text2"
+                    android:textColor="@color/accent"
+                    android:textStyle="bold" />
+            </com.google.android.flexbox.FlexboxLayout>
+
+            <RelativeLayout
+                android:id="@+id/agree_legal_dependent_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="18dp"
+                android:layout_marginLeft="18dp"
+                android:layout_marginRight="28dp">
+
+                <android.support.v7.widget.AppCompatCheckBox
+                    android:id="@+id/agree_legal_dependent_check"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="top" />
+
+                <TextView
+                    android:id="@+id/agree_legal_dependent_text"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/agree_legal_dependent_check"
+                    android:labelFor="@+id/agree_legal_dependent_check"
+                    android:text="@string/agree_legal_dependent_text" />
+            </RelativeLayout>
         </LinearLayout>
-
-        <com.google.android.flexbox.FlexboxLayout
-            android:id="@+id/agree_privacy_policy_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginBottom="18dp"
-            android:layout_marginLeft="18dp"
-            android:layout_marginRight="28dp"
-            app:flexWrap="wrap"
-            android:orientation="horizontal" >
-
-            <android.support.v7.widget.AppCompatCheckBox
-                android:id="@+id/agree_privacy_policy_check"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="-3dp" />
-
-            <TextView
-                android:id="@+id/agree_privacy_policy_text1"
-                android:layout_toRightOf="@+id/agree_privacy_policy_check"
-                android:labelFor="@+id/agree_privacy_policy_check"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/agree_privacy_policy_text1" />
-
-            <TextView
-                android:id="@+id/agree_privacy_policy_text2"
-                android:layout_toRightOf="@+id/agree_privacy_policy_text1"
-                android:labelFor="@+id/agree_privacy_policy_check"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/agree_privacy_policy_text2"
-                android:textColor="@color/accent"
-                android:textStyle="bold" />
-        </com.google.android.flexbox.FlexboxLayout>
-
-        <RelativeLayout
-            android:id="@+id/agree_legal_dependent_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="18dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginBottom="18dp">
-
-            <android.support.v7.widget.AppCompatCheckBox
-                android:id="@+id/agree_legal_dependent_check"
-                android:gravity="top"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/agree_legal_dependent_text"
-                android:layout_toRightOf="@+id/agree_legal_dependent_check"
-                android:labelFor="@+id/agree_legal_dependent_check"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/agree_legal_dependent_text" />
-        </RelativeLayout>
 
         <ProgressBar
             android:id="@+id/cost_progress"
